GCP machine types: break names to two lines to avoid overflow
After trying for hours and failing to make this break neatly using CSS,
I decided to just give up and use JS: every type name has `" - "`
separating the technical type name and the category description. Instead
of letting CSS wrap the line in a random location, I just use this
separator to break up the name to two separate lines.

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -804,15 +804,10 @@ h1 .badged-resource-pf .badged-resource-pf-icon {
     border-width: var(--pf-global--BorderWidth--lg);
   }
 
-  &.gcp-machine-type {
-    width: 340px;
-    max-width: 340px;
-  }
-
   &:disabled {
     // disabled styles
     .pf-l-split, .ocm-flat-button-icon svg, h4.pf-c-title {
-      color: var(---pf-global--Color--200);
+      color: var(--pf-global--disabled-color--100);
     }
     &.pf-m-tertiary::after {
       border-width: 0;
